[tool.poetry]
name = "pong"
version = "0.1.0"
description = ""
authors = ["John Walz <john@doc.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pmg = "pong.cli:main"

[tools.isort]
